Add the free text block Add the small heading block Add the button block Add the button main

--- a/source/frontend/src/asset/style/screen.scss
+++ b/source/frontend/src/asset/style/screen.scss
@@ -1,12 +1,11 @@
 @import '~normalize.css';
+@import 'layout/site-frame';
 @import 'type/font';
 @import 'type/copy';
 @import 'type/heading';
-
 @import 'asset/button';
 @import 'asset/hamburger/hamburger';
 @import 'asset/link';
-
 @import 'asset/sizing/abs-center';
 @import 'asset/sizing/abs-fill';
 @import 'asset/sizing/abs-fill-center';
@@ -27,9 +26,13 @@ html {
 	overflow: visible;
 }
 
-	body {
+body {
 	width: 100%;
 	overflow-y: scroll;
+}
+
+* {
+	box-sizing: border-box;
 }
 
 :root {
