--- a/source/frontend/src/block/Button/Button.scss
+++ b/source/frontend/src/block/Button/Button.scss
@@ -1,3 +1,13 @@
 :local {
+	.button {
+		padding: 0.5rem $sizeGrid * 7;
 
+		&.align-left {
+			text-align: left;
+		}
+
+		&.align-right {
+			text-align: right;
+		}
+	}
 }
