--- a/source/frontend/src/block/ArticleTeaser/ArticleTeaser.scss
+++ b/source/frontend/src/block/ArticleTeaser/ArticleTeaser.scss
@@ -8,6 +8,10 @@
 		overflow: hidden;
 		backface-visibility: hidden;
 		transform: translate3d(0, 0, 0);
+
+		a {
+			text-decoration: none;
+		}
 	}
 
 	.image {
