--- a/source/frontend/src/component/button/ButtonPrimary/ButtonPrimary.scss
+++ b/source/frontend/src/component/button/ButtonPrimary/ButtonPrimary.scss
@@ -73,16 +73,20 @@
 	}
 
 	@include respond-to(X_LARGE) {
-		height: 4.5rem;
+		.button-primary {
+			height: 4.5rem;
+		}
 	}
 
 	// Breakpoints
 	@include respond-to(SMALL) {
-		@include size(auto, mobile-size(10rem));
-		font-size: mobile-size(1.8rem);
-		line-height: mobile-size(10rem);
-		padding: 0 $sizeGrid * 2;
-		margin-left: $sizeGrid;
+		.button-primary {
+			@include size(auto, mobile-size(10rem));
+			font-size: mobile-size(1.8rem);
+			line-height: mobile-size(10rem);
+			padding: 0 $sizeGrid * 2;
+			margin-left: $sizeGrid;
+		}
 
 		.stripe {
 			@include size($sizeGrid*2, 1rem);
