--- a/source/frontend/src/component/layout/SiteHeader/SiteHeader.scss
+++ b/source/frontend/src/component/layout/SiteHeader/SiteHeader.scss
@@ -35,7 +35,7 @@
 
 	@include respond-to(MEDIUM) {
 		.wrapper {
-			@include pos(0, 0, auto, 0);
+			@include position(0, 0, auto, 0);
 			@include size(100%, $sizeGrid * 2);
 			background: $colorWhite;
 			transform: none;
@@ -53,6 +53,10 @@
 			.logo {
 				left: $sizeGrid * 2;
 			}
+		}
+
+		.callToReach {
+			display: none;
 		}
 	}
 }
