--- a/source/frontend/src/component/triangle/SecondaryTriangle/SecondaryTriangle.scss
+++ b/source/frontend/src/component/triangle/SecondaryTriangle/SecondaryTriangle.scss
@@ -4,5 +4,9 @@
 		@include position(50%, auto, auto, $sizeGrid * 14);
 		position: absolute;
 		pointer-events: none;
+
+		@include respond-to(SMALL) {
+			@include arrow(left, rgba($colorSecondary, .95), $sizeGrid * 20);
+		}
 	}
 }
