--- a/source/frontend/src/page/ContentPage/ContentPage.scss
+++ b/source/frontend/src/page/ContentPage/ContentPage.scss
@@ -2,4 +2,10 @@
 	div {
 		position: relative;
 	}
+
+	@include respond-to(MEDIUM) {
+		.blockWrapper {
+			padding-top: $sizeHeaderMobile;
+		}
+	}
 }
