--- a/source/frontend/src/component/button/ButtonHeader/ButtonHeader.scss
+++ b/source/frontend/src/component/button/ButtonHeader/ButtonHeader.scss
@@ -5,7 +5,7 @@
 		background: $colorPrimary;
 		color: $colorWhite;
 		text-align: center;
-		padding: 0 $sizeGrid / 2;
+		padding: 0 $sizeGrid;
 	}
 
 	.label {
@@ -25,7 +25,7 @@
 
 	@include respond-to(SMALL) {
 		.button {
-			@include size($sizeGrid * 6, $sizeGrid * 4);
+			@include size(auto, $sizeGrid * 4);
 			text-align: center;
 		}
 
