Add the desktop version of the persona selector

--- a/source/frontend/src/asset/style/screen.scss
+++ b/source/frontend/src/asset/style/screen.scss
@@ -15,6 +15,7 @@
 @import 'asset/sizing/fill-image';
 @import 'asset/sizing/fit-cover';
 @import 'asset/position/position';
+@import 'asset/pagination-number';
 
 html,
 body {
