Add the mobile persona selector carousel

--- a/source/frontend/src/asset/style/screen.scss
+++ b/source/frontend/src/asset/style/screen.scss
@@ -16,6 +16,8 @@
 @import 'asset/sizing/fit-cover';
 @import 'asset/position/position';
 @import 'asset/pagination-number';
+@import 'asset/infinite-carousel';
+
 
 html,
 body {
