Add the task loader and sequential promises Add a page loader

--- a/source/frontend/src/App/App.scss
+++ b/source/frontend/src/App/App.scss
@@ -2,4 +2,12 @@
 	.app-wrapper {
 		overflow: hidden;
 	}
+
+	.site-wrapper {
+		visibility: hidden;
+
+		&.is-active {
+			visibility: visible;
+		}
+	}
 }
