--- a/source/frontend/src/block/PersonaSelector/PersonaSelectorOptions/PersonaSelectorOptions.scss
+++ b/source/frontend/src/block/PersonaSelector/PersonaSelectorOptions/PersonaSelectorOptions.scss
@@ -1,5 +1,5 @@
 :local {
-	$animationDuration: .3s;
+	$animationDuration: 0.3s;
 	$ease: $easeInOut;
 	$buttonWidth: $sizeGrid * 8;
 	$buttonHeight: $sizeGrid * 3.5;
