--- a/source/frontend/src/component/triangle/SecondaryTriangle/SecondaryTriangle.scss
+++ b/source/frontend/src/component/triangle/SecondaryTriangle/SecondaryTriangle.scss
@@ -6,7 +6,7 @@
 		pointer-events: none;
 
 		@include respond-to(SMALL) {
-			@include arrow(left, rgba($colorSecondary, .95), $sizeGrid * 20);
+			@include arrow(left, rgba($colorSecondary, 0.95), $sizeGrid * 20);
 		}
 	}
 }
