--- a/source/frontend/src/block/PersonaSelector/PersonaSelectorMobileCarousel/PersonaSelectorMobileCarousel.scss
+++ b/source/frontend/src/block/PersonaSelector/PersonaSelectorMobileCarousel/PersonaSelectorMobileCarousel.scss
@@ -33,7 +33,7 @@
 			&:before {
 				@include position(auto, 0, 0, 0);
 				@include size(100%, 25%);
-				background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .25) 100%);
+				background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.25) 100%);
 				content: '';
 				position: absolute;
 			}
@@ -43,5 +43,4 @@
 			@include size(100%);
 		}
 	}
-
 }
