--- a/source/frontend/src/component/AudioPlayer/AudioPlayer.scss
+++ b/source/frontend/src/component/AudioPlayer/AudioPlayer.scss
@@ -34,14 +34,14 @@
 		@include size(100%, $sizeGridSecondary);
 		@include position(50%, auto, auto, 0);
 		transform: translateY(-50%);
-		background: rgba(0, 0, 0, .1);
+		background: rgba(0, 0, 0, 0.1);
 		position: absolute;
 
 		.progress {
 			@include size(0, $sizeGridSecondary);
 			@include position(0, auto, 0, 0);
 			position: absolute;
-			transition: .2s width $easeLinear;
+			transition: 0.2s width $easeLinear;
 			background: $colorPrimary;
 		}
 	}
@@ -54,7 +54,7 @@
 			@include size(100%, 50%);
 			@include position(auto, 0, 0, 0);
 			position: absolute;
-			background: rgba(255, 255, 255, .8);
+			background: rgba(255, 255, 255, 0.8);
 			content: '';
 			z-index: 1;
 		}
