--- a/source/frontend/src/component/DashedPaginator/DashedPaginator.scss
+++ b/source/frontend/src/component/DashedPaginator/DashedPaginator.scss
@@ -20,7 +20,7 @@
 			position: absolute;
 			@include offset(0, 50%);
 			margin-top: -1px;
-			content: "";
+			content: '';
 			@include size(20px, 1px);
 			background-color: currentColor;
 			transform-origin: bottom left;
@@ -33,7 +33,7 @@
 			transition: transform 250ms ease(easeOutExpo);
 
 			&:before {
-				content: counter(item, decimal-leading-zero) "";
+				content: counter(item, decimal-leading-zero) '';
 				display: block;
 				text-align: left;
 			}
@@ -52,7 +52,7 @@
 			}
 		}
 
-		@include hover(){
+		@include hover() {
 			&:before {
 				height: 4px;
 				margin-top: -2px;
