Fix the logo colors

--- a/source/frontend/src/component/Logo/Logo.scss
+++ b/source/frontend/src/component/Logo/Logo.scss
@@ -28,6 +28,12 @@
 	.theme-dark {
 		path {
 			fill: $colorPrimary;
+
+			&:global {
+				&.arrow {
+					fill: $colorSecondary;
+				}
+			}
 		}
 	}
 }
