Add header themes and hiding of the contact button

--- a/source/frontend/src/component/layout/SiteHeader/SiteHeader.scss
+++ b/source/frontend/src/component/layout/SiteHeader/SiteHeader.scss
@@ -7,6 +7,14 @@
 		z-index: zindex($layout, header);
 		transition: background 0.2s $easeInOut;
 
+		&.theme-light {
+			display: block;
+		}
+
+		&.theme-dark {
+			display: block;
+		}
+
 		&.is-scrolled {
 			background: white;
 		}
