--- a/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
+++ b/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
@@ -1,34 +1,47 @@
-{#
-/**
- * @file
- * Default theme implementation for the basic structure of a single Drupal page.
- *
- * @ingroup themeable
- */
-#}
-
-<!DOCTYPE html>
-<html class="no-js">
+<!doctype html>
+<html>
 <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WFHFPM');</script>
-<!-- End Google Tag Manager -->
-<head-placeholder token="{{ placeholder_token|raw }}">
-<title>{{ head_title|safe_join(' | ') }}</title>
-<css-placeholder token="{{ placeholder_token|raw }}">
-<js-placeholder token="{{ placeholder_token|raw }}">
-<script> window.prerenderReady = false; setTimeout(function(){window.prerenderReady = true;}, 20000) </script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,shrink-to-fit=no">
+    <title>Vue Skeleton</title>
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#fff">
+    <meta name="application-name" content="Spectrum Reach">
+    <link rel="apple-touch-icon" sizes="57x57"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7apple-touch-icon-180x180.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Spectrum Reach">
+    <link rel="icon" type="image/png" sizes="32x32"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7favicon-16x16.png">
+    <link rel="shortcut icon"
+          href="/version/{{ frontend_version_int }}/static/favicons/icon-d8b960ca56f436ef5287cb64e4af83d7favicon.ico">
+    <link href="/version/{{ frontend_version_int }}/css/app.css" rel="stylesheet">
 </head>
-<body data-gaia-container="main">
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WFHFPM"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+<body>
+<div id="app"></div>
 {{ page }}
-<js-bottom-placeholder token="{{ placeholder_token|raw }}">
+<script type="text/javascript" src="/version/{{ frontend_version_int }}/js/manifest.js"></script>
+<script type="text/javascript" src="/version/{{ frontend_version_int }}/js/vendor.js"></script>
+<script type="text/javascript" src="/version/{{ frontend_version_int }}/js/app.js"></script>
 </body>
 </html>
