Add the slideout panel Add the contact panel Add form validation functionality Add the custom scrollbar Add form styling

--- a/source/frontend/src/asset/style/screen.scss
+++ b/source/frontend/src/asset/style/screen.scss
@@ -19,6 +19,11 @@
 @import 'asset/pagination-number';
 @import 'asset/infinite-carousel';
 @import 'asset/map-slide/abstract-map-slide';
+@import 'asset/form/fieldset';
+@import 'asset/form/form';
+@import 'asset/form/input';
+@import 'asset/form/checkbox';
+@import 'asset/scroll-bar';
 
 html,
 body {
